// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loading component  should match the snapshot 1`] = `
<div
  className="Loading__Wrapper-sc-1jan2m7-0 kMhPws"
  size={60}
>
  <svg
    className="Loading__Svg-sc-1jan2m7-1 iZTpBD"
    viewBox="25 25 50 50"
  >
    <circle
      className="Loading__Circle-sc-1jan2m7-2 kERifh"
      cx="50"
      cy="50"
      r="12"
    />
  </svg>
</div>
`;

exports[`Loading component  should match the snapshot when it's not visible 1`] = `
<div
  className="Loading__Wrapper-sc-1jan2m7-0 jFGGzX"
  size={60}
>
  <svg
    className="Loading__Svg-sc-1jan2m7-1 iZTpBD"
    viewBox="25 25 50 50"
  >
    <circle
      className="Loading__Circle-sc-1jan2m7-2 kERifh"
      cx="50"
      cy="50"
      r="12"
    />
  </svg>
</div>
`;
